test/semantic_errors/invalid_binaryop7.mc
void main() {
    int res;
    int a;
    bool b;
    res = a + b; /* cannot sum int with bool */
}